--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.DoubleScreen"
         tools:targetApi="31" >
         <activity
+            android:name=".AttendanceforstudentsviewActivity"
+            android:exported="false"
+            android:theme="@style/Theme.DoubleScreen" />
+        <activity
             android:name=".Options"
             android:exported="false" />
         <activity
